src/test/deca/codegen/invalid/resultats/stackoverflow_methode-ima.res
Erreur : La pile est pleine.
